fix gap andnumbers position

--- a/Assets/style/GlobalStyle/style.css
+++ b/Assets/style/GlobalStyle/style.css
@@ -321,7 +321,7 @@
   }
 }
 .wrapper-about-section .about-section .about-section__img {
-  max-width: 50%;
+  max-width: 45%;
   width: 100%;
 }
 @media (max-width: 768px) {
@@ -343,7 +343,7 @@
   }
 }
 .wrapper-about-section .about-section .container-about {
-  max-width: 50%;
+  max-width: 45%;
   width: 100%;
   background: #f4b647;
   padding: 3rem;
@@ -685,8 +685,8 @@
   margin-right: -1.25rem;
   position: absolute;
   border-radius: 50%;
-  padding: 0.6rem;
-  height: 1.25rem;
+  padding: 1.5rem;
+  height: 1.4rem;
   width: 1.25rem;
   background-color: #b51628;
   text-align: center;
@@ -698,8 +698,8 @@
   margin-left: -1.25rem;
   position: absolute;
   border-radius: 50%;
-  padding: 0.6rem;
-  height: 1.25rem;
+  padding: 1.5rem;
+  height: 1.4rem;
   width: 1.25rem;
   background-color: #b51628;
   text-align: center;
